--- a/src/package.json
+++ b/src/package.json
@@ -26,9 +26,9 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
     "@electron-forge/plugin-fuses": "^7.6.0",
     "@electron/fuses": "^1.8.0",
+    "css-loader": "^6.8.1",
     "electron": "^33.2.1",
     "html-webpack-plugin": "^5.6.3",
-    "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
@@ -38,6 +38,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@larinonpm/components": "^0.1.1-beta.4",
     "electron-squirrel-startup": "^1.0.1",
     "lit": "^3.2.1"
   }
