--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@larinonpm/components": "^0.1.1-beta.4",
+    "@sagemodeninja/custom-component": "^2.0.6",
     "electron-squirrel-startup": "^1.0.1",
     "lit": "^3.2.1"
   }
